--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,19 @@
   <title>KaryaSiddhi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Karyasiddhi</title>
+  <meta name="description" content="task management app">
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
