--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <style>*{margin:0;box-sizing:border-box}</style><link rel="stylesheet" href="styles.05c1ab3a058293fe.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.05c1ab3a058293fe.css"></noscript></head>
 <body>
   <app-root></app-root>
+  hello why blank page??
 <script src="runtime.088a79cb23391546.js" type="module"></script><script src="polyfills.6387e0bef99f84a7.js" type="module"></script><script src="main.b6af9341928cb295.js" type="module"></script>
 
 </body></html>
